--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,7 @@
       const form = document.getElementById('add_data');
       form.addEventListener('submit',function(e){
           const data = { 'first_name' : document.getElementById('first_name').value , 'last_name' :  document.getElementById('last_name').value };
-          fetch('http://localhost:3000/crudM',{
+          fetch('/crudM',{
               method : 'post',
               body : JSON.stringify(data),
               headers : new Headers({
@@ -91,7 +91,7 @@
       const eform = document.getElementById('edit_data');
       eform.addEventListener('submit',function(e){
           const data = { 'first_name' : document.getElementById('edit_first_name').value , 'last_name' :  document.getElementById('edit_last_name').value , 'id' :  document.getElementById('unique_id').value };
-          fetch('http://localhost:3000/crudM',{
+          fetch('/crudM',{
               method : 'put',
               body : JSON.stringify(data),
               headers : new Headers({
@@ -104,7 +104,7 @@
           form.reset();
           e.preventDefault();
       });      
-      fetch('http://localhost:3000/crudM')
+      fetch('/crudM')
         .then( res => res.json() )
         .then( data => {
                document.getElementById("loading").style.display = "none";
@@ -146,7 +146,7 @@
         }
         function deleteme(id){
           const data = { 'id' : id};
-          fetch('http://localhost:3000/crudM',{
+          fetch('/crudM',{
               method : 'DELETE',
               body : JSON.stringify(data),
               headers : new Headers({
